Initialise Game Class Definition

--- a/simple.ipynb
+++ b/simple.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,14 @@
     "\n",
     "revealed = [[],[],[],[]]\n",
     "\n",
+    "specials = [[],[],[],[]]\n",
+    "\n",
     "hands = [[],[],[],[]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 449,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,26 +47,29 @@
     "    33, 33, 33, 33, # Green\n",
     "    34, 34, 34, 34, # Red\n",
     "\n",
-    "    35, 36, 37, 38, 39, 40, 41, 42 # Special\n",
+    "    35, 36, 37, 38, 39, 40, 41, 42 # Flowers + Seasons\n",
     "]"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 450,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Pre-Game Flow\n",
-    "1. Shuffle Tiles\n",
-    "2. Roll Dice\n",
-    "3. Deal\n",
-    "4. Handle Flowers\n",
+    "# Pre-Game Flow\n",
+    "# 1. Shuffle Tiles\n",
+    "# 2. Roll Dice\n",
+    "# 3. Deal\n",
+    "# 4. Handle Flowers\n",
     "\n",
-    "This means that the only knowledge needed is who will roll the dice (who the count starts from) this is the previous games winner if there is no previous game randomly assign."
+    "# This means that the only knowledge needed is who will roll the dice (who the count starts from) \n",
+    "# this is the previous games winner if there is no previous game randomly assigned"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,17 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Shuffle Tiles\n",
-    "shuffled_deck = shuffle(deck, random_state=0)"
+    "shuffled_deck = shuffle(deck)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,18 +110,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 455,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Count around the table and determine starting player\n",
-    "offset = 1 % 4 - 1  # Formula to determine the offset of the starting player from the dice roller\n",
+    "offset = dice_roll % 4 - 1  # Formula to determine the offset of the starting player from the dice roller\n",
     "starting_player = dice_roller + offset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 456,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,15 +133,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 457,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The dice roller is: 3\n",
-      "Who rolled: 11\n",
+      "The dice roller is: 2\n",
+      "Who rolled: 10\n",
       "So the starting player is: 3\n"
      ]
     }
@@ -149,33 +154,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(1,5):\n",
     "    if i == starting_player:\n",
     "        for _ in range(14):\n",
-    "            tile = deck.pop(0)\n",
+    "            tile = shuffled_deck.pop(0)\n",
     "            hands[i-1].append(tile)\n",
     "    else:\n",
     "        for _ in range(13):\n",
-    "            tile = deck.pop(0)\n",
+    "            tile = shuffled_deck.pop(0)\n",
     "            hands[i-1].append(tile)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 459,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# Now flowers will be exchanged for playable tiles"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 460,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_special(specials,hand,index):\n",
+    "    special_encodings = [35, 36, 37, 38, 39, 40, 41, 42]\n",
+    "    for i in range(len(hand)):\n",
+    "        if hand[i] in special_encodings:\n",
+    "            specials[index].append(hand[i])\n",
+    "            new_tile = deck.pop(0)\n",
+    "            hand[i] = new_tile\n",
+    "    return hand, specials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 461,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now the game is ready to begin with the starting player discarding a tile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 462,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(4):\n",
+    "    hands[i], specials = draw_special(specials,hands[i],i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 463,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[36, 35], [42, 39], [], []]"
+      ]
+     },
+     "execution_count": 463,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "specials"
    ]
   }
  ],
