--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0, 5)"
+       "(1, 14)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,16 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "3"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,16 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[4, 6, 13, 14, 14, 16, 18, 19, 23, 26, 27, 29, 30, 30]"
+       "[1, 7, 8, 9, 15, 17, 19, 19, 21, 23, 29, 30, 34, 34]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,16 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[6, 15, 16, 17, 18, 25, 27, 27, 29, 31, 32, 34, 34]"
+       "[1, 4, 6, 9, 11, 13, 14, 16, 17, 21, 26, 32, 33]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -168,115 +168,73 @@
     "for i in range(4):\n",
     "    total += len(Game.players[i].hand)\n",
     "    total += len(Game.players[i].specials)\n",
-    "    total += len(Game.players[i].exposed)\n",
+    "    total += len(Game.players[i].exposed_melds)\n",
     "print(total)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def increment_players(current,next):\n",
-    "    current = (current + 1) % 4\n",
-    "    next = (current + 1) % 4\n",
-    "    return current,next"
+    "Game.current_player"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1\n",
-      "1 2\n",
-      "2 3\n",
-      "3 0\n",
-      "0 1\n",
-      "1 2\n",
-      "2 3\n",
-      "3 0\n",
-      "0 1\n",
-      "1 2\n",
-      "2 3\n"
+      "[]\n"
      ]
     }
    ],
    "source": [
-    "current = 0\n",
-    "next = current + 1\n",
-    "print(current,next)\n",
-    "for i in range(10):\n",
-    "    current,next = increment_players(current,next)\n",
-    "    print(current,next)"
+    "Game.play_turn()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pongs = [(tile, tile, tile) for tile in range(1, 35)]\n",
-    "chows = [(i, i+1, i+2) for i in range(1, 8)] + \\\n",
-    "        [(i, i+1, i+2) for i in range(10, 17)] + \\\n",
-    "        [(i, i+1, i+2) for i in range(19, 26)]\n",
-    "sets = pongs + chows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "55"
+       "3"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(sets)"
+    "Game.current_player"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pairs = [(tile, tile) for tile in range(1, 35)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "34"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(pairs)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
