--- a/testing.ipynb
+++ b/testing.ipynb
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "(1, 5)"
+       "(0, 16)"
       ]
      },
      "execution_count": 4,
@@ -56,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "3"
       ]
      },
      "execution_count": 5,
@@ -76,7 +76,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "3"
       ]
      },
      "execution_count": 6,
@@ -96,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "0"
       ]
      },
      "execution_count": 7,
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "[3, 6, 8, 9, 10, 10, 13, 13, 18, 21, 24, 28, 28, 30]"
+       "[2, 2, 3, 10, 13, 18, 18, 20, 24, 25, 25, 28, 29, 34]"
       ]
      },
      "execution_count": 8,
@@ -136,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "[7, 11, 19, 20, 21, 22, 25, 25, 26, 26, 27, 28, 33]"
+       "[1, 3, 4, 5, 15, 17, 19, 23, 26, 26, 30, 32, 33]"
       ]
      },
      "execution_count": 9,
@@ -180,7 +180,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "3"
       ]
      },
      "execution_count": 11,
@@ -198,29 +198,61 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[2, 2, 3, 10, 13, 18, 18, 20, 24, 25, 25, 28, 29, 34]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Game.play_turn()"
+    "Game.players[Game.current_player].hand"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Game.play_turn()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "[2, 2, 3, 10, 13, 18, 18, 20, 24, 25, 25, 28, 29, 34]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Game.players[Game.current_player].hand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,13 +260,6 @@
    "source": [
     "Game.current_player"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
